--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -9,6 +9,7 @@
         android:layout_height="50dp"
         android:layout_width="50dp"
         android:src="@mipmap/ic_launcher"
+
         />
     <TextView
         android:layout_width="wrap_content"
@@ -22,5 +23,38 @@
         android:layout_centerVertical="true"
         android:textSize="18sp"
         />
+
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/img_on"
+        android:layout_height="15dp"
+        android:layout_width="15dp"
+        app:civ_border_color="#05df29"
+        app:civ_border_width="10dp"
+        android:layout_below="@id/username"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/profile_image"
+        android:layout_toEndOf="@id/profile_image"
+        android:layout_marginLeft="-15dp"
+        android:src="@mipmap/ic_launcher"
+        android:visibility="gone"
+        />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/img_off"
+        android:layout_height="15dp"
+        android:layout_width="15dp"
+        app:civ_border_color="#bfbfbf"
+        app:civ_border_width="10dp"
+        android:layout_below="@id/username"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/profile_image"
+        android:layout_toEndOf="@id/profile_image"
+        android:layout_marginLeft="-15dp"
+        android:src="@mipmap/ic_launcher"
+        />
+
 
 </RelativeLayout>
