--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -4,7 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.UsersFragment">
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:id="@+id/search_users"
+        android:hint="Search...."/>
+
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_below="@+id/search_users"
         android:id="@+id/recycle_view"
         android:layout_height="wrap_content"
         android:layout_width="match_parent" />
