--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/bar_layout"
-        android:background="#009688" />
+        android:background="#D83A56" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -57,7 +57,7 @@
             android:background="@color/black"
             android:text="Login"
             android:textColor="@color/white"
-            app:backgroundTint="#009688" />
+            app:backgroundTint="#D83A56" />
 
         <TextView
             android:layout_width="match_parent"
@@ -68,7 +68,7 @@
             android:layout_gravity="end"
             android:textStyle="bold"
             android:id="@+id/forgot_password"
-            android:textColor="#009688"
+            android:textColor="#D83A59"
             />
 
 
