--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/teal_200">
+            android:background="#FF616D">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_image"
