--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -32,10 +32,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="@color/teal_200"
+            android:background="#D83A56"
             android:text="Reset"
             android:textColor="#fff"
-            app:backgroundTint="@color/teal_200" />
+            app:backgroundTint="#D83A56" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
