--- a/app/src/main/res/layout/bar_layout.xml
+++ b/app/src/main/res/layout/bar_layout.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
-    android:background="@color/teal_200">
+    android:background="#FF616D">
 
 </androidx.appcompat.widget.Toolbar>
