--- a/app/src/main/res/layout/activity_login_tuto.xml
+++ b/app/src/main/res/layout/activity_login_tuto.xml
@@ -16,7 +16,7 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:text="If you have account click the button bellow now"
+            android:text="@string/login_tuto"
 
             android:textColor="@color/black"
 
@@ -83,6 +83,6 @@
         android:layout_marginBottom="9dp"
         android:layout_weight="1"
         android:textColor="@color/black"
-        android:text="Skip" />
+        android:text="@string/skip" />
 
 </RelativeLayout>
