--- a/app/src/main/res/layout/activity_register_tuto.xml
+++ b/app/src/main/res/layout/activity_register_tuto.xml
@@ -18,7 +18,7 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:text="If you do not have account click the button bellow to register"
+            android:text="@string/register_tuto"
 
             android:textColor="@color/black"
 
@@ -56,7 +56,7 @@
         android:layout_marginBottom="104dp"
         android:background="#D83A56"
         android:gravity="center"
-        android:text="Register"
+        android:text="@string/register_button"
         android:textColor="@color/black"
         android:textSize="20dp"
         android:textStyle="bold"
@@ -84,5 +84,5 @@
         android:layout_marginBottom="9dp"
         android:layout_weight="1"
         android:textColor="@color/black"
-        android:text="Skip" />
+        android:text="@string/skip" />
 </RelativeLayout>
