changing hard coded color and fixing some issues with timecounter

--- a/app/src/main/res/layout/friend_item.xml
+++ b/app/src/main/res/layout/friend_item.xml
@@ -30,7 +30,7 @@
         android:id="@+id/img_on"
         android:layout_height="15dp"
         android:layout_width="15dp"
-        app:civ_border_color="#05df29"
+        app:civ_border_color="@color/online"
         app:civ_border_width="10dp"
         android:layout_below="@id/username"
         android:layout_marginTop="10dp"
@@ -46,7 +46,7 @@
         android:id="@+id/img_off"
         android:layout_height="15dp"
         android:layout_width="15dp"
-        app:civ_border_color="#bfbfbf"
+        app:civ_border_color="@color/offline"
         app:civ_border_width="10dp"
         android:layout_below="@id/username"
         android:layout_marginTop="10dp"
