--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/bar_layout"
-        android:background="#D83A56" />
+        android:background="@color/colorPrimaryVariant" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,7 +21,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create Account"
+            android:text="@string/create_account"
             />
 
         <com.rengwuxian.materialedittext.MaterialEditText
@@ -57,18 +57,18 @@
             android:background="@color/black"
             android:text="Login"
             android:textColor="@color/white"
-            app:backgroundTint="#D83A56" />
+            app:backgroundTint="@color/colorPrimaryVariant" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="Forgot your password"
+            android:text="@string/forgot_your_password"
             android:layout_marginTop="10dp"
             android:layout_gravity="end"
             android:textStyle="bold"
             android:id="@+id/forgot_password"
-            android:textColor="#D83A59"
+            android:textColor="@color/colorPrimaryVariant"
             />
 
 
