--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@color/colorPrimaryVariant"
-            android:text="Reset"
+            android:text="@string/reset"
             android:textColor="#fff"
             app:backgroundTint="@color/colorPrimaryVariant" />
     <TextView
@@ -42,6 +42,6 @@
         android:gravity="center"
         android:layout_marginTop="15dp"
         android:textColor="#000"
-        android:text="By clicking RESET, you will receive an email to reset your password"/>
+        android:text="@string/reset_your_password"/>
     </LinearLayout>
 </LinearLayout>
