--- a/app/src/main/res/layout/start_main.xml
+++ b/app/src/main/res/layout/start_main.xml
@@ -21,7 +21,7 @@
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="login"
+        android:text="@string/login"
         app:backgroundTint="@color/colorPrimaryVariant" />
 
     <Button
@@ -29,7 +29,7 @@
         android:id="@+id/register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Register"
+        android:text="@string/register"
 
         app:backgroundTint="@color/colorPrimaryVariant" />
 
