--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@color/black"
-            android:text="Login"
+            android:text="@string/log_in"
             android:textColor="@color/white"
             app:backgroundTint="@color/colorPrimaryVariant" />
 
