add change password fonctionality

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    tools:context=".LoginActivity">
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/bar_layout"
-        android:background="#FFFFFF" />
+        android:background="@color/colorPrimaryVariant" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,28 +21,17 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/create_account"
+            android:text="@string/change_password"
             />
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/username"
+            android:id="@+id/oldpassword"
             android:layout_marginTop="10dp"
             app:met_floatingLabel="normal"
-            android:hint="Username"
-            >
-
-        </com.rengwuxian.materialedittext.MaterialEditText>
-
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/email"
-            android:layout_marginTop="10dp"
-            app:met_floatingLabel="normal"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
+            android:inputType="textPassword"
+            android:hint="oldpassword"
             >
 
         </com.rengwuxian.materialedittext.MaterialEditText>
@@ -51,23 +40,48 @@
         <com.rengwuxian.materialedittext.MaterialEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/password"
+            android:id="@+id/newpassword1"
             android:layout_marginTop="10dp"
             app:met_floatingLabel="normal"
-            android:hint="Password"
+            android:hint="new password"
+            android:inputType="textPassword"
+            ></com.rengwuxian.materialedittext.MaterialEditText>
+
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/newpassword2"
+            android:layout_marginTop="10dp"
+            app:met_floatingLabel="normal"
+            android:hint="new password "
             android:inputType="textPassword"
             >
+
+
 
         </com.rengwuxian.materialedittext.MaterialEditText>
 
         <Button
-            android:id="@+id/btn_register"
+            android:id="@+id/btn_change"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:backgroundTint="@color/colorPrimaryVariant"
-            android:text="@string/register"
-            android:textColor="@color/white" />
+            android:background="@color/black"
+            android:text="@string/log_in"
+            android:textColor="@color/white"
+            app:backgroundTint="@color/colorPrimaryVariant" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/forgot_your_password"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="end"
+            android:textStyle="bold"
+            android:id="@+id/forgot_password"
+            android:textColor="@color/colorPrimaryVariant"
+            />
 
 
     </LinearLayout>
