--- a/app/src/main/res/layout/activity_tic_tac_toe.xml
+++ b/app/src/main/res/layout/activity_tic_tac_toe.xml
@@ -7,14 +7,20 @@
     android:background="@color/colorPrimary"
     tools:context=".TicTacToeActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
+    <TextView
+        android:id="@+id/score1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="180dp"
-        android:layout_marginBottom="62dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="57dp"
+        android:fontFamily="serif"
+        android:gravity="center_horizontal"
+        android:text="score: 1-0"
+        android:textAllCaps="false"
+        android:textColor="@android:color/background_dark"
+        android:textSize="36sp"
+        android:textStyle="bold|italic"
         android:visibility="visible"
         app:srcCompat="@drawable/chat"
         tools:ignore="VectorDrawableCompat" />
@@ -73,7 +79,7 @@
         android:id="@+id/imageButton7"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_alignBottom="@+id/imageView"
+        android:layout_alignBottom="@+id/score1"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="92dp"
         android:layout_marginStart="35dp"
