--- a/app/src/main/res/layout/start_main.xml
+++ b/app/src/main/res/layout/start_main.xml
@@ -33,4 +33,11 @@
 
         app:backgroundTint="@color/colorPrimaryVariant" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Life is easy with chat app"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+
 </LinearLayout>
