--- a/app/src/main/res/layout/activity_login_tuto.xml
+++ b/app/src/main/res/layout/activity_login_tuto.xml
@@ -40,14 +40,12 @@
     <Button
         android:id="@+id/login"
         style="@style/Widget.Support.CoordinatorLayout"
-        android:layout_width="205dp"
-        android:layout_height="72dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="124dp"
-        android:layout_marginEnd="83dp"
-        android:layout_marginBottom="96dp"
+        android:layout_marginBottom="104dp"
         android:background="@color/colorPrimaryVariant"
         android:gravity="center"
         android:text="@string/log_in"
