--- a/app/src/main/res/layout/start_main.xml
+++ b/app/src/main/res/layout/start_main.xml
@@ -21,6 +21,7 @@
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:text="@string/login"
         app:backgroundTint="@color/colorPrimaryVariant" />
 
@@ -28,6 +29,7 @@
 
         android:id="@+id/register"
         android:layout_width="match_parent"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
         android:text="@string/register"
 
